# 2022ROSRobot

./: README.md
.dev_image/: Dockerfile
.dev_image/install-scripts/: alias-setup  install-base  install-gazebo  install-ros2  install-rosdep
.devcontainer/: Dockerfile  README.md  bashrc-setup  devcontainer.json
.devcontainer/install-scripts/: install-base
.github/workflows/: build-push.yml
gazebo_sim/4_wheeler/testrobot/: model.sdf
gazebo_sim/4_wheeler_follower/testrobotfull/: model.config
scripts/: postCreate  postStart
src/examplo_bot/: package.xml  setup.cfg  setup.py
src/examplo_bot/config/: basic.rviz  diff_drive_controller.yml
src/examplo_bot/description/: controlsim.xacro  irl.urdf.xacro  sim.urdf.xacro
src/examplo_bot/description/core/: robot_core.xacro
src/examplo_bot/launch/: rviz&gui.launch.py  sim.launch.py  testjoy.launch.py
worlds/gazebo_sim/4_wheeler/testrobot/: model.config
worlds/gazebo_sim/4_wheeler_follower/testrobotfull/: model.sdf
